--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="Home">Home</string>
+    <string name="Driver">Drivers</string>
+    <string name="Learners">Learners</string>
+    <string name="Account">Account</string>
+    <string name="Support">Support</string>
 </resources>
